--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,14 +1,41 @@
+@import url(http://fonts.googleapis.com/css?family=Comfortaa:300,400,700);
+
 body {
 	color: #fff;
 	background-color: #333;
 	font: 16px georgia, serif;
 }
+
 h1, h2, h3, h4, h5, h6 {
+    color: #333;
+    font-family: 'Comfortaa', sans-serif;
 	margin: 24px 0;
 }
+
 h1 {
+    color: #fff;
+    font-size: 48px;
 	text-align: center;
+    text-shadow:
+        0 0 5px hsl( 0, 0%, 0% ),
+        0 0 1em hsl( 0, 0%, 60% );
 }
+
+h1 b:nth-of-type( 1 ) {
+    color: hsl( 0, 0%, 80% );
+    text-shadow:
+        0 0 5px hsl( 0, 0%, 0% ),
+        0 0 1em hsl( 0, 0%, 70% );
+}
+
+h1 b:nth-of-type( 2 ) {
+    color: hsl( 0, 0%, 60% );
+    font-weight: normal;
+    text-shadow:
+        0 0 5px hsl( 0, 0%, 0% ),
+        0 0 1em hsl( 0, 0%, 70% );
+}
+
 .content {
 	color: #000;
 	width: 800px;
