--- a/test/css/style.css
+++ b/test/css/style.css
@@ -22,10 +22,18 @@ h1 {
 }
 
 h1 b:nth-of-type( 1 ) {
-    color: hsl( 0, 0%, 80% );
+    color: hsl(80, 100%, 50%); 
     text-shadow:
         0 0 5px hsl( 0, 0%, 0% ),
         0 0 1em hsl( 0, 0%, 70% );
+
+    -webkit-transition: color 1s;
+       -moz-transition: color 1s;
+            transition: color 1s;
+}
+
+h1:hover b:nth-of-type( 1 ) {
+    color: hsl(180, 100%, 70%); 
 }
 
 h1 b:nth-of-type( 2 ) {
@@ -44,7 +52,7 @@ h1 b:nth-of-type( 2 ) {
 
 	background-color: #fff;
 	padding: 0 24px;
-	border: 3px solid #a9ff00;
+	border: 3px solid hsl(80, 100%, 50%);
 
      -moz-box-shadow: 0px 0px 10px #fff; 
   -webkit-box-shadow: 0px 0px 10px #fff; 
@@ -56,7 +64,16 @@ h1 b:nth-of-type( 2 ) {
                     
   -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; 
 
+    -webkit-transition: border 1s;
+       -moz-transition: border 1s;
+            transition: border 1s;
+
 }
+
+h1:hover + .content {
+	border: 3px solid hsl(180, 100%, 50%);
+}
+
 .source {
 	border: 1px solid #ccc;
 	display: block;
