--- a/test/css/style.css
+++ b/test/css/style.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     color: #fff;
+    cursor: default;
     font-size: 48px;
 	text-align: center;
     text-shadow:
