--- a/test/css/style.css
+++ b/test/css/style.css
@@ -51,7 +51,7 @@ h1 b:nth-of-type( 2 ) {
 	line-height: 24px;
 
 	background-color: #fff;
-	padding: 0 24px;
+	padding: 0 24px 24px;
 	border: 3px solid hsl(80, 100%, 50%);
 
      -moz-box-shadow: 0px 0px 10px #fff; 
@@ -72,9 +72,4 @@ h1 b:nth-of-type( 2 ) {
 
 h1:hover + .content {
 	border: 3px solid hsl(180, 100%, 50%);
-}
-
-.source {
-	border: 1px solid #ccc;
-	display: block;
 }
