--- a/src/mighty.source.css
+++ b/src/mighty.source.css
@@ -1,6 +1,8 @@
-.source {
-	border: 1px solid #ccc;
+.mighty-source {
+	border: 2px solid #333;
 	display: block;
 	padding: 10px;
 	border-radius: 5px;
+	text-align: center;
+	background-color: #fff;
 }
