--- a/src/mighty.mostpopular.css
+++ b/src/mighty.mostpopular.css
@@ -84,6 +84,7 @@
 }
 
 .aol-most-popular-social .articles {
+    height: 800px; /* TEMPORARY! */
     margin-left: 20px;
     overflow: hidden;
     position: relative;
@@ -92,14 +93,18 @@
 
 .aol-most-popular-social ul {
     float: left;
+    left: 280px;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    position: absolute; 
     width: 280px;
+    
+    -webkit-transition: left 0.2s;
 }
 
 .aol-most-popular-social ul.current {
-    background-color: red;
+    left: 0;
 }
 
 .aol-most-popular-social ul li {
@@ -218,10 +223,16 @@
     text-transform: lowercase;
 }
 
-.aol-most-popular-social .nav .back, .aol-most-popular-social .nav .forward {
+.aol-most-popular-social .nav .back,
+.aol-most-popular-social .nav .forward {
     cursor: pointer;
     padding: 9px 10px 5px;
     position: relative;
+}
+
+.aol-most-popular-social .nav .back:active,
+.aol-most-popular-social .nav .forward:active {
+    top: 1px;
 }
 
 .aol-most-popular-social .nav .back {
@@ -230,7 +241,8 @@
     padding-right: 6px;
 }
 
-.aol-most-popular-social .nav .back span, .aol-most-popular-social .nav .forward span {
+.aol-most-popular-social .nav .back span,
+.aol-most-popular-social .nav .forward span {
     border-bottom: #216b96 solid 6px;
     border-left: #216b96 solid 6px;
     border-right: #216b96 solid 6px;
