--- a/test/css/style.css
+++ b/test/css/style.css
@@ -6,6 +6,10 @@ body {
 	font: 16px georgia, serif;
 }
 
+pre {
+	margin: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: #333;
     font-family: 'Comfortaa', sans-serif;
