--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,4 +1,4 @@
-/* @import url(http://fonts.googleapis.com/css?family=Comfortaa:300,400,700); */
+@import url(http://fonts.googleapis.com/css?family=Comfortaa:300,400,700);
 
 body {
 	color: #fff;
