--- a/src/mighty.source.css
+++ b/src/mighty.source.css
@@ -1,3 +1,18 @@
+/*
+	Mighty Reset
+*/
+.mighty-module * {
+	border: 0;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	font: 15px/24px arial;
+	text-align: left;
+}
+
+/*
+	Mighty Source Core
+*/
 .mighty-source, .mighty-source2 {
 	border: 2px solid #333;
 	display: block;
@@ -7,6 +22,39 @@
 	background-color: #fff;
 }
 
+/*
+	Mighty Tabs Core
+*/
 .mighty-tabs {
 	
+}
+.mighty-tabs > .tabs {
+	list-style-type: none;
+}
+.mighty-tabs > .tabs > li {
+	display: inline-block;
+}
+.mighty-tabs .panel {
+	display: none;
+}
+.mighty-tabs .selected {
+	display: block;
+}
+/*
+	Mighty Tabs Skin
+*/
+.mighty-tabs > .tabs {
+	border-bottom: 1px solid #000;
+}
+.mighty-tabs .tab {
+	border: 1px solid #000;
+	padding: 0 6px;
+	cursor: pointer;
+	margin-left: 6px;
+	margin-bottom: -1px;
+	font-size: 13px;
+	font-weight: bold;
+}
+.mighty-tabs > .tabs .selected {
+	background-color: #FC6;
 }
