--- a/src/mighty.source.css
+++ b/src/mighty.source.css
@@ -14,14 +14,29 @@
 	Mighty Source Core
 */
 .mighty-source, .mighty-source2 {
-	border: 2px solid #333;
+	border: 2px solid #000;
 	display: block;
-	padding: 10px;
 	border-radius: 5px;
 	text-align: center;
-	background-color: #fff;
-}
+	
+	background-color: #333333;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#333333), to(#8d8d8d)); 
+	background-image: -webkit-linear-gradient(top, #333333, #8d8d8d); 
+	background-image:    -moz-linear-gradient(top, #333333, #8d8d8d); 
+	background-image:     -ms-linear-gradient(top, #333333, #8d8d8d); 
+	background-image:      -o-linear-gradient(top, #333333, #8d8d8d); 
+	background-image:         linear-gradient(top, #333333, #8d8d8d);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#333333', EndColorStr='#8d8d8d'); 
 
+}
+.mighty-source > h2 {
+	color: #fff;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 22px;
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
 /*
 	Mighty Tabs Core
 */
@@ -43,18 +58,45 @@
 /*
 	Mighty Tabs Skin
 */
+.mighty-tabs {
+	
+  -webkit-transition: height 0.3s ease-out;  
+     -moz-transition: height 0.3s ease-out;  
+      -ms-transition: height 0.3s ease-out;  
+       -o-transition: height 0.3s ease-out;  
+          transition: height 0.3s ease-out;  
+
+}
 .mighty-tabs > .tabs {
-	border-bottom: 1px solid #000;
+	border-bottom: 2px solid #000;
+	line-height: 13px;
 }
 .mighty-tabs .tab {
-	border: 1px solid #000;
-	padding: 0 6px;
+	border: 2px solid #000;
+	padding: 6px 12px;
 	cursor: pointer;
-	margin-left: 6px;
-	margin-bottom: -1px;
-	font-size: 13px;
+	margin-left: 12px;
+	margin-bottom: -2px;
+	font-size: 14px;
+	line-height: 14px;
 	font-weight: bold;
+	background-color: #f8ffec;
+	border-radius: 5px 5px 0 0;
 }
 .mighty-tabs > .tabs .selected {
-	background-color: #FC6;
+	background-color: #fff;
+	border-bottom: 2px solid #fff;
+}
+.mighty-tabs .panel {
+	padding: 12px;
+	border-radius: 0 0 3px 3px;
+
+	background-color: #ffffff;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e3ffab)); 
+	background-image: -webkit-linear-gradient(top, #ffffff, #e3ffab); 
+	background-image:    -moz-linear-gradient(top, #ffffff, #e3ffab); 
+	background-image:     -ms-linear-gradient(top, #ffffff, #e3ffab); 
+	background-image:      -o-linear-gradient(top, #ffffff, #e3ffab); 
+	background-image:         linear-gradient(top, #ffffff, #e3ffab);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#e3ffab'); 
 }
