--- a/src/mighty/breakingnews/mighty.breakingnews.css
+++ b/src/mighty/breakingnews/mighty.breakingnews.css
@@ -1,34 +1,34 @@
-.breaking-news {
+.mighty-breakingnews {
 	background-color: #F6F6F6;
 	border: 1px solid #ccc;
 	display: block;
 	padding: 5px;
 	width: 300px;	
 }
-.breaking-news h2 {
+.mighty-breakingnews h2 {
 	font-size: 18px;	
 	color: #4A4A4A;		
 }
 
-.breaking-news .articles ul.article-list li {
+.mighty-breakingnews .articles ul.article-list li {
 	list-style-type: none;
 	border-bottom: 1px dashed #000;
 	margin-bottom: 10px;
 }
 
-.breaking-news .articles ul.article-list li h2{
+.mighty-breakingnews .articles ul.article-list li h2{
 	color: #4A4A4A;
 	font-size: 30px;
 	padding-bottom: 5px;
 }
 
-.breaking-news .articles ul.article-list li a {
+.mighty-breakingnews .articles ul.article-list li a {
 	color: #4A4A4A;
 	font-size: 12px;
 	text-decoration: none;
 }
 
-.breaking-news .articles ul.article-list li span.comments{
+.mighty-breakingnews .articles ul.article-list li span.comments{
 	color: #4A4A4A;
 	display: block;
 	font-size: 11px;
@@ -38,14 +38,14 @@ span.comments b {
 	font-size: 11px;
 }
 
-.breaking-news img.thumb {
+.mighty-breakingnews img.thumb {
 	width: 300px;
 	height: 75px;
 }
-.breaking-news-footer {
+.mighty-breakingnews-footer {
 	overflow: hidden;
 }
-.breaking-news-footer .more-news {
+.mighty-breakingnews-footer .more-news {
 	color: #4A4A4A;
 	float: left;
 	font-size: 15px;
@@ -54,7 +54,7 @@ span.comments b {
 	text-transform: uppercase;
 }
 
-.breaking-news-footer .refresh-news {
+.mighty-breakingnews-footer .refresh-news {
 	background: url("/../images/refresh.png") no-repeat scroll left center transparent;
     cursor: pointer;
     float: right;
