dave's change busted a bunch of junk.
i like this more better. kthnxbai. also, forget resetting text-shadow
on h1s. too strong man, too strong.

--- a/test/css/style.css
+++ b/test/css/style.css
@@ -21,9 +21,11 @@ h1 {
     cursor: default;
     font-size: 48px;
 	text-align: center;
+    /*too strong 
+    
     text-shadow:
         0 0 5px hsl( 0, 0%, 0% ),
-        0 0 1em hsl( 0, 0%, 60% );
+        0 0 1em hsl( 0, 0%, 60% );*/
 }
 
 h1 b:nth-of-type( 1 ) {
