--- a/src/mighty/mostwatchedvideos/mighty.mostwatchedvideos.css
+++ b/src/mighty/mostwatchedvideos/mighty.mostwatchedvideos.css
@@ -10,9 +10,11 @@
 	height: 23px;
 	padding: 15px;
 }
+.mighty-mostwatchedvideos .mighty-videos-ul {
+	display:none;
+}
 .mighty-mostwatchedvideos-active img {
 	width: 294px;
-	height: 170px;
 	margin: 2px;
 }
 .mighty-mostwatchedvideos-active a {
@@ -21,7 +23,20 @@
     font-weight: bold;
     text-decoration: none; 
 }
-
+.mighty-mostwatchedvideos-active a.mighty-mostwatchedvideos-play {
+	background: url("../../../images/video-play-btn.png") no-repeat scroll -6px -2px transparent;
+	display: block;
+	height: 80px;
+	margin-left: 105px;
+	opacity: 0.8;
+	position: absolute;
+	text-indent: -9999em;
+	margin-top: 75px;
+	width: 80px;
+}
+.mighty-mostwatchedvideos-active a.mighty-mostwatchedvideos-play:hover {
+	opacity: 1;
+}
 .mighty-mostwatchedvideos-active p {
 	padding-left: 10px;
 }
@@ -43,7 +58,7 @@
 
 .mighty-mostwatchedvideos .advertisement {
 	margin: 0 0 10px 32px;
-} 	
+}
 .mighty-mostwatchedvideos .mighty-mostwatchedvideos-controls{
 	width:298px;
 	position: absolute;
@@ -52,7 +67,7 @@
 .mighty-mostwatchedvideos .mighty-mostwatchedvideos-controls-next{
 	width:33px;
 	height:54px;
-	top:59px;
+	top:84px;
 	position: absolute;
 	text-indent: -10000px;
 	background-color: rgb(0,0,0);
