Style updates to factory.

--- a/factory/css/style.css
+++ b/factory/css/style.css
@@ -55,7 +55,7 @@ table {
 
 body {
 	font-size: 16px;
-	font-family: arial;
+	font-family: helvetica, arial;
 	line-height: 24px;
 	margin: 24px;
 	color: #333;
@@ -66,15 +66,45 @@ body {
 	padding-bottom: 24px;
 }
 .header > h1 {
-	background: url(bearing-fruit-logo.png);
-	height: 72px;
-	width: 372px;	
-	text-indent: -99em;
+	background: url(bearing-fruit.png) no-repeat;
+	height: 96px;
+	line-height: 80px;
+	padding-left: 112px;
+	font-size: 60px;
+	font-weight: normal;
+}
+.header > h1 > i {
+	display: block;
+	font-size: 15px;
+	line-height: 15px;
+	margin-top: -6px;
+	padding-left: 2px;
+}
+.header > .logo {
+	width: 350px;
+	cursor: pointer;
+}
+.header > .logo > b {
+	-webkit-transition: color 0.4s ease-out;  
+	-moz-transition: color 0.4s ease-out;  
+	transition: color 0.4s ease-out;  
+}
+.header > .logo > .logo-color-0 {
+	color: #e74612; /* red */
+}
+.header > .logo > .logo-color-1 {
+	color: #f5a410; /* orange */
+}
+.header > .logo > .logo-color-2 {
+	color: #f1ee3f; /* yellow */
+}
+.header > .logo > .logo-color-3 {
+	color: #abe01d; /* green */
 }
 
 .chooser {
 	margin-top: 24px;
-	margin-right: 36px;
+	margin-right: 24px;
 	width: 288px;
 	float: left;
 }
@@ -90,21 +120,21 @@ body {
 }
 .chooser > ul > li > a {
 	font-size: 16px;
-	padding: 4px 24px 3px;
+	line-height: 16px;
+	padding: 10px 24px 9px;
 	display: block;
 	text-decoration: none;
 	color: #fe5f35;
 	
 	background-color: rgb(255,255,255);
 	
-	-webkit-transition: background-color 0.5 linear;  
-	-moz-transition: background-color 0.5 linear;  
-	-ms-transition: background-color 0.5 linear;  
-	-o-transition: background-color 0.5 linear;  
-	transition: background-color 0.5 linear;  
+	-webkit-transition: background-color 0.3s ease-out;  
+	-moz-transition: background-color 0.3s ease-out;  
+	transition: background-color 0.3s ease-out;  
 }
 .chooser > ul > li > a:hover {
 	background-color: rgb(241,241,241);
+	
 }
 
 .factory {
@@ -115,16 +145,20 @@ body {
 .factory > .widgets > li {
 	border-left: 6px solid #fff;
 	padding: 12px 24px;
+  -webkit-transition: all 0.3s ease-out;  
+     -moz-transition: all 0.3s ease-out;  
+          transition: all 0.3s ease-out;  
 }
 .factory > .widgets > li:hover {
-  -webkit-transition: background-color 0.5 linear;  
-     -moz-transition: background-color 0.5 linear;  
-      -ms-transition: background-color 0.5 linear;  
-       -o-transition: background-color 0.5 linear;  
-          transition: background-color 0.5 linear;  
+  -webkit-transition: all 0.3s ease-out;  
+     -moz-transition: all 0.3s ease-out;  
+          transition: all 0.3s ease-out;  
 	
 	background-color: #f1f1f1;
-	border-left: 6px solid #fe5f35;
+	border-left: 6px solid #e74612;
 	
 	cursor: pointer;
+}
+.factory > .widgets > li > h3 {
+	font-size: 19px;
 }
