--- a/src/mighty/realtime/mighty.realtime.css
+++ b/src/mighty/realtime/mighty.realtime.css
@@ -13,9 +13,12 @@
 .mighty-realtime .mighty-realtime-li {
 	margin: 5px;
     overflow: hidden;
+    -moz-transition: margin-left .5s ease;
+    -webkit-transition: margin-left .5s ease;
+    transition: margin-left .5s ease;
 }
 .mighty-realtime .mighty-realtime-title {
-	//border-radius: 0 50px 50px 0;
+	filter: alpha(opacity=70);
 	float: left;
     height: 60px;
     line-height: 16px;
@@ -35,6 +38,7 @@
     border-style: solid;
     border-width: 35px;
     content: " ";
+	filter: alpha(opacity=70);
     float: left;
     height: 0;
     left: 100%;
