--- a/src/mighty/localnews/mighty.localnews.css
+++ b/src/mighty/localnews/mighty.localnews.css
@@ -10,7 +10,7 @@ body .mighty-localnews {
 	margin-bottom: 5px;
 }
 .mighty-localnews .header h2 {
-	background: url("../../../images/mostpopular/huffpost.png") no-repeat scroll 0 50% transparent;
+	background: url("../../images/mostpopular/huffpost.png") no-repeat scroll 0 50% transparent;
 	font-size: 18px;	
 	color: #4A4A4A;
 	margin-bottom: 5px;
