--- a/src/mighty/mostpopular/mighty.mostpopular.css
+++ b/src/mighty/mostpopular/mighty.mostpopular.css
@@ -6,7 +6,7 @@
     padding: 10px;
 }
 .mighty-mostpopular h2 {
-    background: no-repeat url( "../../../images/mostpopular/huffpost.png" ) 50% 50%;
+    background: no-repeat url( "../../images/mostpopular/huffpost.png" ) 50% 50%;
 	color: #296a5a;
     height: 21px;
 	font-size: 22px;
